--- a/index.html
+++ b/index.html
@@ -4,7 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nexel | Tu negocio al siguiente nivel</title>
+    <meta name="description" content="Creamos tiendas online profesionales y personalizadas para emprendedores. En Nexel impulsamos tu negocio con diseños modernos, pagos integrados y soporte completo." />
+    <meta name="keywords" content="tienda virtual, e-commerce, tienda online, crear tienda, diseño web, página web, ventas online, Nexel, ecommerce Ecuador" />
+    <meta name="author" content="Nexel_ec25" />
+
+    <!-- Indexación -->
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="es" />
+    <meta name="revisit-after" content="7 days" />
+
+    <!-- Open Graph (para compartir en redes sociales como Facebook, WhatsApp) -->
+    <meta property="og:title" content="Nexel — Tiendas virtuales personalizadas para emprendedores" />
+    <meta property="og:description" content="Transforma tu idea en una tienda online profesional. Nexel crea tu e-commerce con todo lo que necesitas para vender más." />
+    <meta property="og:image" content="https://tudominio.com/images/preview.jpg" />
+    <meta property="og:url" content="https://tudominio.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Nexel" />
+    <meta property="og:locale" content="es_EC" />
+
+    <!-- Twitter Cards (para mejorar la vista en X/Twitter) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Nexel — Tiendas virtuales personalizadas para emprendedores" />
+    <meta name="twitter:description" content="Creamos tiendas online modernas, seguras y listas para vender. Empieza tu negocio digital hoy con Nexel." />
+    <meta name="twitter:image" content="https://tudominio.com/images/preview.jpg" />
+    
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" type="image/x-icon" href="/img/nl.png">
+
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
