--- a/index.html
+++ b/index.html
@@ -282,7 +282,8 @@
                 <ul>
                     <li><a href="/">Inicio</a></li>
                     <li><a href="/pages/aboutus.html">Quiénes somos</a></li>
-                    <li><a href="#faq">Preguntas frecuentes</a></li>
+                    <li><a href="/pages/service.html">Nuestros servicios</a></li>
+
                     <li><a href="https://wa.me/593963328168?text=Hola!%20Estoy%20interesado%20en%20una%20tienda%20virtual">WhatsApp</a></li>
                 </ul>
             </div>
@@ -291,8 +292,8 @@
             <div class="footer-social">
                 <h4>Síguenos</h4>
                 <div class="social-icons">
-                    <a href="#" class="social-icon"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/share/1CvmMT8UeP/" class="social-icon"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/nexel_ec25/" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </div>
         </div>
