--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
             <!-- Contenedor de imágenes -->
             <div class="admin-view-images">
-                <img id="img-productos" src="/img/vistaProductos.png" alt="Vista de Productos" class="view-image active">
+                <img id="img-productos" src="/img/vistaProducto1.png" alt="Vista de Productos" class="view-image active">
                 <img id="img-inventario" src="/img/vistaInventario.png" alt="Vista de Inventario" class="view-image">
                 <img id="img-pedidos" src="/img/vistaPedidos.png" alt="Vista de Pedidos" class="view-image">
             </div>
