--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
             <!-- Contenedor de imágenes -->
             <div class="admin-view-images">
                 <img id="img-productos" src="/img/vistaProducto1.png" alt="Vista de Productos" class="view-image active">
-                <img id="img-inventario" src="/img/vistaInventario.png" alt="Vista de Inventario" class="view-image">
-                <img id="img-pedidos" src="/img/vistaPedidos.png" alt="Vista de Pedidos" class="view-image">
+                <img id="img-inventario" src="/img/vistaInventarios.png" alt="Vista de Inventario" class="view-image">
+                <img id="img-pedidos" src="/img/vistaPedido.png" alt="Vista de Pedidos" class="view-image">
             </div>
 
             <!-- Descripción -->
