--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -104,7 +104,7 @@
         </div>
 
         <div class="team-member">
-          <img src="/img/int3.jpeg" alt="Integrante 3">
+          <img src="/img/iint3.png" alt="Integrante 3">
           <h3>Alexander Nieves</h3>
           <p class="role">Diseñador UI/UX</p>
           <p class="bio">
