footer y foto actualizado

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <!-- Enlaces de navegación -->
             <div class="btn-nav" id="nav-links">
                 <ul>
+                    <li><a href="/index.html">Inicio</a></li>
                     <li><a href="/pages/aboutus.html">Sobre Nosotros</a></li>
                     <li><a href="/pages/service.html">Servicio</a></li>
                     <li><a href="https://wa.me/593963328168?text=Hola!%20Estoy%20interesado%20en%20una%20tienda%20virtual">Contacto</a></li>
