--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -58,6 +58,7 @@
             <!-- Enlaces de navegación -->
             <div class="btn-nav" id="nav-links">
                 <ul>
+                    <li><a href="/index.html">Inicio</a></li>
                     <li><a href="/pages/aboutus.html">Sobre Nosotros</a></li>
                     <li><a href="/pages/service.html">Servicio</a></li>
                     <li><a href="https://wa.me/593963328168?text=Hola!%20Estoy%20interesado%20en%20una%20tienda%20virtual">Contacto</a></li>
@@ -85,7 +86,7 @@
       <div class="team-container">
 
         <div class="team-member">
-          <img src="/img/int1.jpg" alt="Integrante 1">
+          <img src="/img/intttt1.png" alt="Integrante 1">
           <h3>Héctor Cobeña</h3>
           <p class="role">Fundador & Desarrollador Web</p>
           <p class="bio">
@@ -129,7 +130,7 @@
       <div class="footer-links">
         <h4>Enlaces útiles</h4>
         <ul>
-          <li><a href="/">Inicio</a></li>
+          <li><a href="/index.html">Inicio</a></li>
           <li><a href="/pages/aboutus.html">Quiénes somos</a></li>
             <li><a href="/pages/service.html">Nuestros servicios</a></li>
           <li><a href="https://wa.me/593963328168?text=Hola!%20Estoy%20interesado%20en%20una%20tienda%20virtual">WhatsApp</a></li>
