--- a/pages/service.html
+++ b/pages/service.html
@@ -52,6 +52,7 @@
 
       <div class="btn-nav" id="nav-links">
         <ul>
+          <li><a href="/index.html">Inicio</a></li>
           <li><a href="/pages/aboutus.html">Sobre Nosotros</a></li>
           <li><a href="/pages/service.html" class="active">Servicio</a></li>
           <li><a href="https://wa.me/593963328168?text=Hola!%20Estoy%20interesado%20en%20una%20tienda%20virtual">Contacto</a></li>
@@ -146,7 +147,7 @@
       <div class="footer-links">
         <h4>Enlaces útiles</h4>
         <ul>
-          <li><a href="/">Inicio</a></li>
+          <li><a href="/index.html">Inicio</a></li>
           <li><a href="/pages/aboutus.html">Quiénes somos</a></li>
             <li><a href="/pages/service.html">Nuestros servicios</a></li>
 
