--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -86,7 +86,7 @@
       <div class="team-container">
 
         <div class="team-member">
-          <img src="/img/intttt1.png" alt="Integrante 1">
+          <img src="/img/int_01.png" alt="Integrante 1">
           <h3>Héctor Cobeña</h3>
           <p class="role">Fundador & Desarrollador Web</p>
           <p class="bio">
